Change to blog page, maybe

--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,10 @@
+---
+layout: page
+title: Blog
+use-site-title: true
+bigimg: "/img/bgkale.png"
+---
+
 Below was originally in the index.html after the page layout information. 
 Possibly use in a page of blog/post/news.
 
