--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: page
 title: Dianne Velasco
 subtitle: Postdoctoral Researcher
 use-site-title: true
-bigimg: "/img/bgkale.png"
+bigimg: "/img/DSC1528.jpg"
 ---
