--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: page
 title: Dianne Velasco
 subtitle: Postdoctoral Researcher
 use-site-title: true
-bigimg: "/img/crusher.jpg"
+bigimg: "/img/crusher_full.jpg"
 ---
