--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
----
+e---
 layout: page
-title: Dianne Velasco
-subtitle: Postdoctoral Researcher
+title: Dianne Velasco, PhD
+subtitle: Geneticist
 use-site-title: true
 bigimg: "/img/crusher_full.jpg"
 ---
