--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Dianne Velasco, PhD
-subtitle: Geneticist
+title: Dianne Velasco
+subtitle: PhD Geneticist
 use-site-title: true
 bigimg: "/img/crusher_full.jpg"
 ---
