updates to main pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Dianne Velasco
-subtitle: Postdoctoral Researcher
+subtitle: PhD Geneticist
 use-site-title: true
 bigimg: "/img/crusher_full.jpg"
 ---
