update images on main and blog index pages

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: page
 title: Dianne Velasco
 subtitle: PhD Geneticist
 use-site-title: true
-bigimg: "/img/crusher_full.jpg"
+bigimg: "/img/almondblossoms_2018-02-07.JPG"
 ---
