--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Blog
 use-site-title: true
-bigimg: "/img/bgkale.png"
+bigimg: "/img/lavenderblossoms_2020-04-16.JPG"
 ---
 
 <div class="posts-list">
